@@ -1,0 +1,9 @@
+\begin{ccRefFunctionObjectConcept}{Kernel::Construct_opposite_vector_2}
+A model for this must provide:
+
+\ccCreationVariable{fo}
+
+\ccMemberFunction{Kernel::Vector_2 operator()(const Kernel::Vector_2& v);}
+{returns the vector \ccc{-v}.}
+
+\end{ccRefFunctionObjectConcept}
