@@ -1,0 +1,9 @@
+\begin{ccRefFunctionObjectConcept}{Kernel::Construct_opposite_vector_3}
+A model for this must provide:
+
+\ccCreationVariable{fo}
+
+\ccMemberFunction{Kernel::Vector_3 operator()(const Kernel::Vector32& v);}
+{returns the vector \ccc{-v}.}
+
+\end{ccRefFunctionObjectConcept}
