@@ -3,7 +3,7 @@ A model for this must provide:
 
 \ccCreationVariable{fo}
 
-\ccMemberFunction{Kernel::Vector_3 operator()(const Kernel::Plane_3& p)
+\ccMemberFunction{Kernel::Vector_3 operator()(const Kernel::Plane_3& p);}
 {returns a vector that is orthogonal to the plane \ccc{p} and directed
  to the positive side of \ccc{p}.}
 
