@@ -293,6 +293,10 @@
 \KernelRefLayout
 \input{Ref/Kernel_Construct_opposite_triangle_2.tex} %ck
 \KernelRefLayout
+\input{Ref/Kernel_Construct_opposite_vector_2.tex} %ck
+\KernelRefLayout
+\input{Ref/Kernel_Construct_opposite_vector_3.tex} %ck
+\KernelRefLayout
 \input{Ref/Kernel_Construct_orthogonal_vector_3.tex} %ck
 \KernelRefLayout
 \input{Ref/Kernel_Construct_perpendicular_direction_2.tex}  %ck
