@@ -114,6 +114,8 @@ for equality testing.
 \ccNestedType{Construct_opposite_triangle_2}{}
 \ccGlue
 \ccNestedType{Construct_opposite_circle_2}{}
+\ccGlue
+\ccNestedType{Construct_opposite_vector_2}{}
 
 If the result type is not determined, there is no \ccc{Construct_} prefix:
 
@@ -320,6 +322,8 @@ If the result type is a number type, the prefix is \ccc{Compute_}:
 \ccNestedType{Construct_opposite_line_3}{}
 \ccGlue
 \ccNestedType{Construct_opposite_plane_3}{}
+\ccGlue
+\ccNestedType{Construct_opposite_vector_3}{}
 
 If the result type is not determined, there is no \ccc{Construct_} prefix:
 
@@ -509,6 +513,8 @@ an \ccc{_object} suffix.
 \ccGlue
 \ccMemberFunction{Kernel::Construct_opposite_circle_2 construct_opposite_circle_2_object() const ;}{}
 \ccGlue
+\ccMemberFunction{Kernel::Construct_opposite_vector_2 construct_opposite_vector_2_object() const ;}{}
+\ccGlue
 \ccMemberFunction{Kernel::Transform_2 transform_2_object() const ;}{}
 \ccGlue
 \ccMemberFunction{Kernel::Assign_2 assign_2_object() const ;}{}
@@ -674,6 +680,8 @@ an \ccc{_object} suffix.
 \ccMemberFunction{Kernel::Construct_opposite_line_3 construct_opposite_line_3_object() const ;}{}
 \ccGlue
 \ccMemberFunction{Kernel::Construct_opposite_plane_3 construct_opposite_plane_3_object() const ;}{}
+\ccGlue
+\ccMemberFunction{Kernel::Construct_opposite_vector_3 construct_opposite_vector_3_object() const ;}{}
 \ccGlue
 \ccMemberFunction{Kernel::Construct_supporting_plane_3 construct_supporting_plane_3_object() const ;}{}
 \ccGlue
