@@ -1,5 +1,7 @@
 3.45   (?? June 2001)
 - Cleanup misc.h and don't include it from basic.h.
+- Added Construct_orthogonal_vector_[23]
+- Added Construct_opposite_vector_[23]
 
 3.44   (19 June 2001)
 - Change to support cgal_window instead of LEDA (CGAL_USE_CGAL_WINDOW).
